# AnchorSwap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
contracts/anchorswap/: Cargo.toml  soroban.toml
contracts/anchorswap/src/: error.rs  lib.rs  storage.rs  test.rs
contracts/anchorswap/src/tests/: integration.rs  mod.rs  unit.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
docs/: api_reference.md  architecture.md  design_decisions.md
frontend/: .eslintrc.json  next.config.js  next.config.mjs  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/pool/: page.tsx
frontend/src/app/pool/add/: page.tsx
frontend/src/app/pool/remove/: page.tsx
frontend/src/app/swap/: page.tsx
frontend/src/components/: AddLiquidityForm.tsx  Header.tsx  Navbar.tsx  PoolCard.tsx  PoolForm.tsx  RemoveLiquidityForm.tsx  SwapForm.tsx  TokenSelect.tsx
frontend/src/hooks/: usePairStats.ts
frontend/src/lib/: soroban.ts  tokens.ts  wallet.tsx
scripts/: deploy_testnet.sh
